fix layout issue

--- a/projects/memory/src/app/app.component.scss
+++ b/projects/memory/src/app/app.component.scss
@@ -1,5 +1,9 @@
 :host {
 	display: flex;
 	flex-direction: column;
-	height: 100dvh;
+	height: 100%;
+}
+
+.content {
+	flex: 1;
 }
